# Astraea

./: .gitignore  Dockerfile.backend  Dockerfile.worker  README.md  RESULTS.md  architecture.md  docker-compose.yml  extract_astraea_clean.sh  package-lock.json  package.json  pyproject.toml  replay_case.py  run_demo_pipeline.py  run_pipeline.py  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/engine/: page.tsx
artifacts/evaluation/: astraea_evaluation_report.json  baseline_comparison_report.json
artifacts/replays/: case_evt_001.json  case_evt_002.json  case_evt_003.json  case_evt_01000.json  case_evt_01001.json  case_evt_01002.json
artifacts/results/: case_evt_001.json  case_evt_002.json  case_evt_003.json
backend/api/: main.py
backend/audit/: recorder.py
backend/core/: pipeline.py  replay.py
components/: artifacts-section.tsx  audit-section.tsx  audit-visualization.tsx  case-study.tsx  cursor-glow.tsx  data-flow-diagram.tsx  decision-breakdown.tsx  failure-scenario.tsx  footer.tsx  hero.tsx  nav.tsx  pipeline-diagram.tsx  pipeline-visualizer.tsx  scroll-narrative.tsx  system-metrics.tsx  system-mode-switch.tsx  system-side-rail.tsx  timeline-view.tsx
data/: sample_events.json  synthetic_events_100.json
docs/: ASTRAEA_PAPER.md
k8s/: api.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  redis.yaml  secrets.yaml  worker.yaml
lib/: data.ts
scripts/: compare_baselines.py  evaluate_astraea.py  generate_synthetic_events.py
tests/: test_benchmarks.py  test_comprehensive.py  test_pipeline.py
(+28 files in other folders)
